modify observers to be adaptive to tablet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,27 @@
 <!-- <router-outlet></router-outlet> -->
 
-<div *ngIf="isHandset$ | async">
+<!-- <div *ngIf="isHandset$ | async">
   <nevy11-phone-display></nevy11-phone-display>
 </div>
-<div *ngIf="isMedium$ | async">
-  <nevy11-medium></nevy11-medium>
-</div>
+<div *ngIf="isMedium$ | async"></div>
 <div *ngIf="isLarge$ | async">
   <nevy11-large-display></nevy11-large-display>
 </div>
 
 <div *ngIf="isLargeBrave$ | async">
   <nevy11-large-display></nevy11-large-display>
-</div>
+</div> -->
+
+@if (isHandset$|async) {
+<nevy11-phone-display></nevy11-phone-display>
+
+}@else if (isLarge$|async) {
+<nevy11-large-display></nevy11-large-display>
+
+}@else if (isLargeBrave$|async) {
+<nevy11-large-display></nevy11-large-display>
+
+} @else {
+<nevy11-medium></nevy11-medium>
+
+}
