add login, sign up, help center and official websiter to main routing model. Remove old login component

--- a/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-settings-tablet.component.html
+++ b/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-settings-tablet.component.html
@@ -1,45 +1,1 @@
-<cdk-accordion class="example-accordion">
-  @for (item of items; track item; let index = $index) {
-  <cdk-accordion-item
-    #accordionItem="cdkAccordionItem"
-    class="example-accordion-item"
-    role="button"
-    tabindex="0"
-    [attr.id]="'accordion-header-' + index"
-    [attr.aria-expanded]="accordionItem.expanded"
-    [attr.aria-controls]="'accordion-body-' + index"
-  >
-    <div class="example-accordion-item-header" (click)="accordionItem.toggle()">
-      {{ item }}
-      <span class="example-accordion-item-description">
-        Click to {{ accordionItem.expanded ? "close" : "open" }}
-      </span>
-    </div>
-    <div
-      class="example-accordion-item-body"
-      role="region"
-      [style.display]="accordionItem.expanded ? '' : 'none'"
-      [attr.id]="'accordion-body-' + index"
-      [attr.aria-labelledby]="'accordion-header-' + index"
-    >
-      <button
-        mat-flat-button
-        [routerLink]="content[index]"
-        style="background-color: purple; color: white"
-        class="btns"
-      >
-        {{ item }}
-      </button>
-    </div>
-  </cdk-accordion-item>
-  }
-</cdk-accordion>
-<div nevy11Center>
-  <button
-    mat-flat-button
-    (click)="login()"
-    style="margin-top: 2.5rem; margin-bottom: 2.5rem"
-  >
-    login
-  </button>
-</div>
+<nevy11-top-bar-content></nevy11-top-bar-content>
