--- a/src/app/large-display/large/landing-page/top-bar-large/top-settings-large/top-settings-large.component.html
+++ b/src/app/large-display/large/landing-page/top-bar-large/top-settings-large/top-settings-large.component.html
@@ -9,37 +9,24 @@
     [attr.aria-expanded]="accordionItem.expanded"
     [attr.aria-controls]="'accordion-body-' + index"
   >
-    <div class="example-accordion-item-header" (click)="accordionItem.toggle()">
+    <div
+      class="example-accordion-item-header"
+      (click)="accordionItem.toggle()"
+      [routerLink]="items_index[index]"
+    >
       {{ item }}
       <span class="example-accordion-item-description">
-        Click to {{ accordionItem.expanded ? "close" : "open" }}
+        Click to {{ accordionItem.expanded ? "close" : "open" }} {{ item }}
       </span>
     </div>
-    <div
-      class="example-accordion-item-body"
-      role="region"
-      [style.display]="accordionItem.expanded ? '' : 'none'"
-      [attr.id]="'accordion-body-' + index"
-      [attr.aria-labelledby]="'accordion-header-' + index"
-    >
-      <button
-        mat-flat-button
-        [routerLink]="content[index]"
-        style="background-color: purple; color: white"
-        class="btns"
-      >
-        {{ item }}
-      </button>
+
+    <div>
+      @if (accordionItem.expanded) {
+      <div>
+        <router-outlet></router-outlet>
+      </div>
+      }
     </div>
   </cdk-accordion-item>
   }
 </cdk-accordion>
-<div nevy11Center>
-  <button
-    mat-flat-button
-    (click)="login()"
-    style="margin-top: 2.5rem; margin-bottom: 2.5rem"
-  >
-    login
-  </button>
-</div>
