update the help center, official website and library

--- a/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-bar-content/help-center-content/help-center-content.component.html
+++ b/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-bar-content/help-center-content/help-center-content.component.html
@@ -1,1 +1,56 @@
-<p>help-center-content works!</p>
+<mat-card class="help-center-card">
+  <h1 class="help-center-title">Help Center</h1>
+
+  <mat-accordion>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <mat-icon>help_outline</mat-icon> How can I reset my password?
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <p class="mat-body-large">
+        To reset your password, go to the login page and click on the "Forgot
+        Password" link. You'll receive an email with instructions to reset your
+        password.
+      </p>
+    </mat-expansion-panel>
+
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <mat-icon>help_outline</mat-icon> How can I contact support?
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <p class="mat-body-large">
+        You can contact support by emailing support example.com or calling our
+        hotline at 1-800-123-4567.
+      </p>
+    </mat-expansion-panel>
+
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <mat-icon>help_outline</mat-icon> Where can I find tutorials?
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <p class="mat-body-large">
+        You can find tutorials in the Resources section of our website. We have
+        video tutorials, articles, and guides to help you get started.
+      </p>
+    </mat-expansion-panel>
+
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <mat-icon>help_outline</mat-icon> How do I update my account
+          information?
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <p class="mat-body-large">
+        To update your account information, log in to your profile and go to the
+        Account Settings section. From there, you can update your personal
+        details and preferences.
+      </p>
+    </mat-expansion-panel>
+  </mat-accordion>
+</mat-card>
