--- a/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-bar-content/official-website-content/official-website-content.component.html
+++ b/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-bar-content/official-website-content/official-website-content.component.html
@@ -1,1 +1,10 @@
-<p>official-website-content works!</p>
+<div class="top-main">
+  <section>
+    <h1 class="mat-display-large">Welcome to LCP</h1>
+    <p class="mat-body-large">This is the landing page content...</p>
+  </section>
+</div>
+
+<div class="routes">
+  <nevy11-chat-widget></nevy11-chat-widget>
+</div>
