update the card in library

--- a/src/app/large-display/large/landing-page/top-bar-large/top-settings-large/top-settings-large.component.html
+++ b/src/app/large-display/large/landing-page/top-bar-large/top-settings-large/top-settings-large.component.html
@@ -16,7 +16,7 @@
     >
       {{ item }}
       <span class="example-accordion-item-description">
-        Click to {{ accordionItem.expanded ? "close" : "open" }} {{ item }}
+        {{ accordionItem.expanded ? "close" : "open" }} {{ item }}
       </span>
     </div>
 
