--- a/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-bar-content/help-center-content/help-center-content.component.html
+++ b/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-bar-content/help-center-content/help-center-content.component.html
@@ -54,3 +54,30 @@
     </mat-expansion-panel>
   </mat-accordion>
 </mat-card>
+<!-- <div class="mat-typography">
+  <h1 style="text-align: center">Help Center</h1>
+  <h3><mat-icon>help_outline</mat-icon> How can I reset my password?</h3>
+  <p>
+    To reset your password, go to the login page and click on the "Forgot
+    Password" link. You'll receive an email with instructions to reset your
+    password.
+  </p>
+  <h3><mat-icon>help_outline</mat-icon> How can I contact support?</h3>
+  <p>
+    You can contact support by emailing support example.com or calling our
+    hotline at 1-800-123-4567.
+  </p>
+  <h3><mat-icon>help_outline</mat-icon> Where can I find tutorials?</h3>
+  <p>
+    You can find tutorials in the Resources section of our website. We have
+    video tutorials, articles, and guides to help you get started.
+  </p>
+  <h3>
+    <mat-icon>help_outline</mat-icon> How do I update my account information?
+  </h3>
+  <p>
+    To update your account information, log in to your profile and go to the
+    Account Settings section. From there, you can update your personal details
+    and preferences.
+  </p>
+</div> -->
