--- a/src/app/phone/p-landing-page/top-bar/top-settings/top-settings.component.html
+++ b/src/app/phone/p-landing-page/top-bar/top-settings/top-settings.component.html
@@ -16,7 +16,7 @@
     >
       {{ item }}
       <span class="example-accordion-item-description">
-        Click to {{ accordionItem.expanded ? "close" : "open" }} {{ item }}
+        {{ accordionItem.expanded ? "close" : "open" }} {{ item }}
       </span>
     </div>
 
