--- a/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-bar-content/top-bar-content.component.html
+++ b/src/app/tablet-display/landing-page-tablet/top-bar-tablet/top-settings-tablet/top-bar-content/top-bar-content.component.html
@@ -16,7 +16,7 @@
     >
       {{ item }}
       <span class="example-accordion-item-description">
-        Click to {{ accordionItem.expanded ? "close" : "open" }} {{ item }}
+        {{ accordionItem.expanded ? "close" : "open" }} {{ item }}
       </span>
     </div>
 
